--- a/dev/tutorials/creating_ode/index.html
+++ b/dev/tutorials/creating_ode/index.html
@@ -17,20 +17,20 @@ ode = @ODEmodel(
         r1 * x1(t) * (1 - c1 * x1(t)) + beta1 * x1(t) * x2(t) / (chi1 + x2(t)) + u(t),
     x2&#39;(t) = r2 * x2(t) * (1 - c2 * x2(t)) + beta2 * x1(t) * x2(t) / (chi2 + x1(t)),
     y(t) = x1(t)
-)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">x1&#39;(t) = (-c1*r1*chi1*x1(t)^2 - c1*r1*x1(t)^2*x2(t) + r1*chi1*x1(t) + r1*x1(t)*x2(t) + chi1*u(t) + u(t)*x2(t) + beta1*x1(t)*x2(t))//(chi1 + x2(t))
-x2&#39;(t) = (-r2*c2*x1(t)*x2(t)^2 - r2*c2*x2(t)^2*chi2 + r2*x1(t)*x2(t) + r2*x2(t)*chi2 + x1(t)*beta2*x2(t))//(x1(t) + chi2)
+)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">x1&#39;(t) = (beta1*x1(t)*x2(t) - c1*chi1*r1*x1(t)^2 - c1*r1*x1(t)^2*x2(t) + chi1*r1*x1(t) + chi1*u(t) + r1*x1(t)*x2(t) + u(t)*x2(t))//(chi1 + x2(t))
+x2&#39;(t) = (beta2*x1(t)*x2(t) - c2*chi2*r2*x2(t)^2 - c2*r2*x1(t)*x2(t)^2 + chi2*r2*x2(t) + r2*x1(t)*x2(t))//(chi2 + x1(t))
 y(t) = x1(t)
-</code></pre><p>Then one can, for example, assess identifiability of the parameters and states by</p><pre><code class="language-julia hljs">assess_identifiability(ode)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Dict{Any, Symbol} with 10 entries:
-  beta1 =&gt; :globally
-  r1    =&gt; :globally
-  chi2  =&gt; :globally
-  c1    =&gt; :globally
+</code></pre><p>Then one can, for example, assess identifiability of the parameters and states by</p><pre><code class="language-julia hljs">assess_identifiability(ode)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">OrderedCollections.OrderedDict{Any, Symbol} with 10 entries:
   x1    =&gt; :globally
   x2    =&gt; :nonidentifiable
+  beta1 =&gt; :globally
   beta2 =&gt; :globally
+  c1    =&gt; :globally
   c2    =&gt; :nonidentifiable
-  r2    =&gt; :globally
-  chi1  =&gt; :nonidentifiable</code></pre><h2 id="Defining-using-ModelingToolkit"><a class="docs-heading-anchor" href="#Defining-using-ModelingToolkit">Defining using <code>ModelingToolkit</code></a><a id="Defining-using-ModelingToolkit-1"></a><a class="docs-heading-anchor-permalink" href="#Defining-using-ModelingToolkit" title="Permalink"></a></h2><p>Alternatively, one can use <code>ModelingToolkit</code>: encode the equations for the states as <code>ODESystem</code> and specify the outputs separately. In order to do this, we first introduce all functions and scalars:</p><pre><code class="language-julia hljs">using StructuralIdentifiability, ModelingToolkit
+  chi1  =&gt; :nonidentifiable
+  chi2  =&gt; :globally
+  r1    =&gt; :globally
+  r2    =&gt; :globally</code></pre><h2 id="Defining-using-ModelingToolkit"><a class="docs-heading-anchor" href="#Defining-using-ModelingToolkit">Defining using <code>ModelingToolkit</code></a><a id="Defining-using-ModelingToolkit-1"></a><a class="docs-heading-anchor-permalink" href="#Defining-using-ModelingToolkit" title="Permalink"></a></h2><p>Alternatively, one can use <code>ModelingToolkit</code>: encode the equations for the states as <code>ODESystem</code> and specify the outputs separately. In order to do this, we first introduce all functions and scalars:</p><pre><code class="language-julia hljs">using StructuralIdentifiability, ModelingToolkit
 
 @parameters r1, r2, c1, c2, beta1, beta2, chi1, chi2
 @variables t, x1(t), x2(t), y(t), u(t)
@@ -46,15 +46,15 @@ ode_mtk = ODESystem(eqs, t, name = :mutualist)</code></pre><p class="math-contai
 \frac{\mathrm{d} \mathrm{x1}\left( t \right)}{\mathrm{d}t} =&amp; u\left( t \right) + \frac{beta1 \mathrm{x1}\left( t \right) \mathrm{x2}\left( t \right)}{chi1 + \mathrm{x2}\left( t \right)} + \left( 1 - c1 \mathrm{x1}\left( t \right) \right) r1 \mathrm{x1}\left( t \right) \\
 \frac{\mathrm{d} \mathrm{x2}\left( t \right)}{\mathrm{d}t} =&amp; \frac{beta2 \mathrm{x1}\left( t \right) \mathrm{x2}\left( t \right)}{chi2 + \mathrm{x1}\left( t \right)} + \left( 1 - c2 \mathrm{x2}\left( t \right) \right) r2 \mathrm{x2}\left( t \right)
 \end{align}
- \]</p><p>Then, for example, the identifiability of parameters and states can be assessed as follows:</p><pre><code class="language-julia hljs">assess_identifiability(ode_mtk, measured_quantities = measured_quantities)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Dict{SymbolicUtils.BasicSymbolic{Real}, Symbol} with 11 entries:
+ \]</p><p>Then, for example, the identifiability of parameters and states can be assessed as follows:</p><pre><code class="language-julia hljs">assess_identifiability(ode_mtk, measured_quantities = measured_quantities)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">OrderedCollections.OrderedDict{SymbolicUtils.BasicSymbolic{Real}, Symbol} with 11 entries:
+  x1(t) =&gt; :globally
+  x2(t) =&gt; :nonidentifiable
+  u(t)  =&gt; :globally
+  chi1  =&gt; :nonidentifiable
   r1    =&gt; :globally
   beta1 =&gt; :globally
-  r2    =&gt; :globally
-  beta2 =&gt; :globally
-  x2(t) =&gt; :nonidentifiable
-  c2    =&gt; :nonidentifiable
-  chi1  =&gt; :nonidentifiable
-  chi2  =&gt; :globally
-  x1(t) =&gt; :globally
   c1    =&gt; :globally
-  u(t)  =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. H. Wright, <a href="https://doi.org/10.1086/285003"><em>A Simple, Stable Model of Mutualism Incorporating Handling Time</em></a>, The American Naturalist, 1989, 134(4).</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../">« Home</a><a class="docs-footer-nextpage" href="../identifiability/">Identifiability of Differential Models (Local and Global) »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.1.2 on <span class="colophon-date" title="Tuesday 14 November 2023 14:14">Tuesday 14 November 2023</span>. Using Julia version 1.9.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  c2    =&gt; :nonidentifiable
+  chi2  =&gt; :globally
+  r2    =&gt; :globally
+  beta2 =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. H. Wright, <a href="https://doi.org/10.1086/285003"><em>A Simple, Stable Model of Mutualism Incorporating Handling Time</em></a>, The American Naturalist, 1989, 134(4).</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../">« Home</a><a class="docs-footer-nextpage" href="../identifiability/">Identifiability of Differential Models (Local and Global) »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.1.2 on <span class="colophon-date" title="Tuesday 14 November 2023 21:54">Tuesday 14 November 2023</span>. Using Julia version 1.9.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
