build based on 7633afd

--- a/dev/index.html
+++ b/dev/index.html
@@ -36,6 +36,7 @@ Platform Info:
   [ec485272] ArnoldiMethod v0.2.0
   [4fba245c] ArrayInterface v7.7.0
   [4c555306] ArrayLayouts v1.5.1
+  [a9b6321e] Atomix v0.1.0
   [6e4b80f9] BenchmarkTools v1.4.0
   [e2ed5e7c] Bijections v0.1.6
   [62783981] BitTwiddlingConvenienceFunctions v0.1.5
@@ -87,7 +88,7 @@ Platform Info:
   [d7ba0133] Git v1.3.0
   [c27321d9] Glob v1.3.1
   [86223c79] Graphs v1.9.0
-⌅ [0b43b601] Groebner v0.5.1
+  [0b43b601] Groebner v0.6.0
 ⌅ [d5909c97] GroupsCore v0.4.2
   [3e5b6fbb] HostCPUFeatures v0.1.16
   [34004b35] HypergeometricFunctions v0.3.23
@@ -138,7 +139,7 @@ Platform Info:
   [1dea7af3] OrdinaryDiffEq v6.69.0
   [90014a1f] PDMats v0.11.31
   [65ce6f38] PackageExtensionCompat v1.0.2
-  [3e851597] ParamPunPam v0.2.4
+  [3e851597] ParamPunPam v0.2.5
   [d96e819e] Parameters v0.12.3
   [69de0a69] Parsers v2.8.1
   [e409e4f3] PoissonRandom v0.4.4
@@ -161,10 +162,9 @@ Platform Info:
   [ae029012] Requires v1.3.0
   [79098fc4] Rmath v0.7.1
   [7e49a35a] RuntimeGeneratedFunctions v0.5.12
-  [fdea26ae] SIMD v3.4.6
   [94e857df] SIMDTypes v0.1.0
   [476501e8] SLEEFPirates v0.6.42
-  [0bca4576] SciMLBase v2.17.0
+  [0bca4576] SciMLBase v2.17.1
   [c0aeaf25] SciMLOperators v0.3.7
   [efcf1570] Setfield v1.1.1
   [727e6d20] SimpleNonlinearSolve v1.2.0
@@ -199,6 +199,7 @@ Platform Info:
   [3a884ed6] UnPack v1.0.2
   [1986cc42] Unitful v1.19.0
   [a7c27f48] Unityper v0.1.6
+  [013be700] UnsafeAtomics v0.2.1
   [3d5dd08c] VectorizationBase v0.21.65
   [19fa3120] VertexSafeGraphs v0.2.0
   [e21ec000] Antic_jll v0.201.500+0
@@ -267,4 +268,4 @@ Platform Info:
   [3f19e933] p7zip_jll v17.4.0+2
 Info Packages marked with ⌃ and ⌅ have new versions available. Those with ⌃ may be upgradable, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.1 on <span class="colophon-date" title="Monday 8 January 2024 22:55">Monday 8 January 2024</span>. Using Julia version 1.10.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="auto">Automatic (OS)</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.2.1 on <span class="colophon-date" title="Tuesday 9 January 2024 03:01">Tuesday 9 January 2024</span>. Using Julia version 1.10.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
