build based on d34f4dd

--- a/dev/index.html
+++ b/dev/index.html
@@ -36,7 +36,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [79e6a3ab] Adapt v4.1.1
   [66dad0bd] AliasTables v1.1.3
   [ec485272] ArnoldiMethod v0.4.0
-  [4fba245c] ArrayInterface v7.17.1
+  [4fba245c] ArrayInterface v7.18.0
   [4c555306] ArrayLayouts v1.11.0
 ⌅ [a9b6321e] Atomix v0.1.0
   [6e4b80f9] BenchmarkTools v1.5.0
@@ -46,7 +46,6 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [70df07ce] BracketingNonlinearSolve v1.1.0
   [2a0fbf3d] CPUSummary v0.2.6
   [00ebfdb7] CSTParser v3.4.3
-  [7057c7e9] Cassette v0.3.14
   [d360d2e6] ChainRulesCore v1.25.0
   [fb6a15b2] CloseOpenIntervals v0.1.13
   [944b1d66] CodecZlib v0.7.6
@@ -65,14 +64,14 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [9a962f9c] DataAPI v1.16.0
   [864edb3b] DataStructures v0.18.20
   [e2d170a0] DataValueInterfaces v1.0.0
-  [2b5f629d] DiffEqBase v6.160.0
+  [2b5f629d] DiffEqBase v6.161.0
   [459566f4] DiffEqCallbacks v4.2.2
   [77a26b50] DiffEqNoiseProcess v5.24.0
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
   [a0c0ee7d] DifferentiationInterface v0.6.27
   [8d63f2c5] DispatchDoctor v0.4.17
-  [31c24e10] Distributions v0.25.113
+  [31c24e10] Distributions v0.25.114
   [ffbed154] DocStringExtensions v0.9.3
   [e30172f5] Documenter v1.8.0
   [5b8099bc] DomainSets v0.7.14
@@ -91,7 +90,6 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [6a86dc24] FiniteDiff v2.26.2
   [1fa38f19] Format v1.3.7
   [f6369f11] ForwardDiff v0.10.38
-  [f62d2435] FunctionProperties v0.1.2
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
   [d9f16b24] Functors v0.5.2
@@ -141,15 +139,15 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [77ba4419] NaNMath v1.0.2
 ⌅ [2edaba10] Nemo v0.45.7
   [8913a72c] NonlinearSolve v4.2.0
-  [be0214bd] NonlinearSolveBase v1.3.3
-  [5959db7a] NonlinearSolveFirstOrder v1.1.0
-  [9a2c21bd] NonlinearSolveQuasiNewton v1.0.0
-  [26075421] NonlinearSolveSpectralMethods v1.0.0
+  [be0214bd] NonlinearSolveBase v1.4.0
+  [5959db7a] NonlinearSolveFirstOrder v1.2.0
+  [9a2c21bd] NonlinearSolveQuasiNewton v1.1.0
+  [26075421] NonlinearSolveSpectralMethods v1.1.0
   [6fe1bfb0] OffsetArrays v1.14.2
   [429524aa] Optim v1.10.0
   [bac558e1] OrderedCollections v1.7.0
   [90014a1f] PDMats v0.11.31
-⌃ [3e851597] ParamPunPam v0.4.1
+⌅ [3e851597] ParamPunPam v0.4.1
   [d96e819e] Parameters v0.12.3
   [69de0a69] Parsers v2.8.1
   [e409e4f3] PoissonRandom v0.4.4
@@ -178,12 +176,12 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7e49a35a] RuntimeGeneratedFunctions v0.5.13
   [94e857df] SIMDTypes v0.1.0
   [476501e8] SLEEFPirates v0.6.43
-  [0bca4576] SciMLBase v2.67.0
+  [0bca4576] SciMLBase v2.68.1
   [19f34311] SciMLJacobianOperators v0.1.1
   [c0aeaf25] SciMLOperators v0.3.12
   [53ae85a6] SciMLStructures v1.6.1
   [efcf1570] Setfield v1.1.1
-  [727e6d20] SimpleNonlinearSolve v2.0.0
+  [727e6d20] SimpleNonlinearSolve v2.1.0
   [699a6c99] SimpleTraits v0.9.4
   [a2af1166] SortingAlgorithms v1.2.1
   [0a514795] SparseMatrixColorings v0.4.10
@@ -195,7 +193,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [1e83bf80] StaticArraysCore v1.4.3
   [10745b16] Statistics v1.11.1
   [82ae8749] StatsAPI v1.7.0
-  [2913bbd2] StatsBase v0.34.3
+  [2913bbd2] StatsBase v0.34.4
   [4c63d2b9] StatsFuns v1.3.2
   [7792a7ef] StrideArraysCore v0.5.7
   [892a3eda] StringManipulation v0.4.0
@@ -219,7 +217,7 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [3a884ed6] UnPack v1.0.2
   [1986cc42] Unitful v1.21.1
   [a7c27f48] Unityper v0.1.6
-  [013be700] UnsafeAtomics v0.2.1
+⌅ [013be700] UnsafeAtomics v0.2.1
   [3d5dd08c] VectorizationBase v0.21.71
   [2e619515] Expat_jll v2.6.4+1
   [e134572f] FLINT_jll v300.100.300+0
@@ -285,4 +283,4 @@ Threads: 1 default, 0 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [3f19e933] p7zip_jll v17.4.0+2
 Info Packages marked with ⌃ and ⌅ have new versions available. Those with ⌃ may be upgradable, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Thursday 12 December 2024 07:11">Thursday 12 December 2024</span>. Using Julia version 1.11.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.8.0 on <span class="colophon-date" title="Monday 16 December 2024 23:16">Monday 16 December 2024</span>. Using Julia version 1.11.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
